--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-paper": "^5.12.3",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
