--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-maps": "^1.15.6",
     "react-native-paper": "^5.12.3",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
