--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-maps": "^1.15.6",
     "react-native-paper": "^5.12.3",
     "react-native-vector-icons": "^10.1.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-image-picker": "~15.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
