--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react": "~18.2.79",
     "expo": "~51.0.9",
+    "expo-image-picker": "~15.0.5",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
@@ -22,8 +23,7 @@
     "react-native-maps": "^1.15.6",
     "react-native-paper": "^5.12.3",
     "react-native-vector-icons": "^10.1.0",
-    "typescript": "~5.3.3",
-    "expo-image-picker": "~15.0.5"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
