--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-maps": "^1.15.6",
     "react-native-paper": "^5.12.3",
     "react-native-vector-icons": "^10.1.0",
