--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.0",
     "@react-native-community/geolocation": "^3.2.1",
+    "@react-native-firebase/storage": "^20.1.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
