--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-maps": "^1.15.6",
     "react-native-paper": "^5.12.3",
     "react-native-svg": "^15.3.0",
+    "react-native-switch-selector": "^2.3.0",
     "react-native-vector-icons": "^10.1.0",
     "typescript": "~5.3.3"
   },
