--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.2",
+    "openai": "^4.50.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-maps": "^1.15.6",
+    "react-native-openai": "^0.6.1",
     "react-native-paper": "^5.12.3",
     "react-native-svg": "^15.3.0",
     "react-native-switch-selector": "^2.3.0",
