--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.74.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.15.6",
     "react-native-openai": "^0.6.1",
     "react-native-paper": "^5.12.3",
