--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,12 @@
     "production": {}
   },
   "submit": {
-    "production": {}
+    "production": {      
+      "android": {
+      "image": "latest"
+    },
+    "ios": {
+      "image": "latest"
+    }
   }
 }
