--- a/eas.json
+++ b/eas.json
@@ -10,16 +10,18 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "android": {
+        "image": "latest"
+      },
+      "ios": {
+        "image": "latest"
+      }
+    }
   },
   "submit": {
     "production": {      
-      "android": {
-      "image": "latest"
-    },
-    "ios": {
-      "image": "latest"
-    }
+
     }
   }
 }
